Added a comment to index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-
+    <!--Just adding a comment-->
     <div class="keys">
         <div data-key="65" class="key">
             <kbd>A</kbd>
